--- a/ServerStatusNotifier/app/src/main/AndroidManifest.xml
+++ b/ServerStatusNotifier/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -29,7 +29,8 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-        <service android:name=".scheduler.ServerAvailabilityChecker"
+        <service
+            android:name=".scheduler.ServerAvailabilityChecker"
             android:permission="android.permission.BIND_JOB_SERVICE"
             android:exported="true" />
     </application>
