--- a/ServerStatusNotifierBukkit/build.gradle
+++ b/ServerStatusNotifierBukkit/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '4.0.3'
 }
 
 group 'com.github.grzegorzekkk.serverstatusnotifierbukkit'
-version '1.0.1-SNAPSHOT'
+version '1.1'
 
 sourceCompatibility = 1.8
 
@@ -14,9 +15,16 @@ repositories {
 }
 
 dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     compileOnly 'org.spigotmc:spigot-api:1.13.1-R0.1-SNAPSHOT'
     compileOnly 'org.bukkit:bukkit:1.13.1-R0.1-SNAPSHOT'
+}
+
+shadowJar {
+    dependencies {
+        include(dependency('com.github.grzegorzekkk.*:*:*'))
+    }
 }
