--- a/ServerStatusNotifier/app/src/main/AndroidManifest.xml
+++ b/ServerStatusNotifier/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".serverdetails.ServerDetailsActivity" />
+        <activity android:name=".serverconsole.ServerConsoleActivity" />
 
         <receiver android:name=".scheduler.StartUpReceiver">
             <intent-filter>
