--- a/ServerStatusNotifierBukkit/build.gradle
+++ b/ServerStatusNotifierBukkit/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'com.github.grzegorzekkk.serverstatusnotifierbukkit'
-version '1.2'
+version '1.3'
 
 sourceCompatibility = 1.8
 
@@ -18,6 +18,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
     compileOnly 'org.spigotmc:spigot-api:1.13.1-R0.1-SNAPSHOT'
     compileOnly 'org.bukkit:bukkit:1.13.1-R0.1-SNAPSHOT'
